
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [API_PARSER] [ARMIS_CENTRIX] Add source and destination boundaries in resulting logs
### Changed
- [API_PARSER] [ARMIS_CENTRIX] Limit fetch quantity while testing collector


## [2.34.2] - 2025-11-24
### Fixed
- [API_PARSER] [UBIKA] Avoid concurrent runs of collector
- [API_PARSER] [GATEWATCHER_ALERTS] Avoid collect getting stuck when delay is over 24h


## [2.34.1] - 2025-11-14
### Fixed
- [API_PARSER] [VECTRA] Fix key error when there is no log during 24 hours


## [2.34.0] - 2025-11-10
### Added
- [API_PARSER] [CNAPP_WIZ] New collector
- [SCRIPTS] [REFRESH_NIC] Support CARP configuration import from rc.conf
- [LOG_FORWARDER] [HIREDIS] Make TLS configurable for HIREDIS from GUI
- [FRONTEND] [HIREDIS] Make TLS configurable for REDIS Listeners from GUI
### Changed
- [GUI] [NETIF] Show CARP information for addresses imported from rc.conf (support for externally managed CARP)
### Fixed
- [API_PARSER] [VECTRA] Use separate timestamps for log kinds to avoid missing log
- [SCRIPTS] [REFRESH_NIC] Correctly parse complex rc.conf ifconfig entries
- [MIDDLEWARE] [OS] Wrongly report that node is not bootstrapped
- [GUI] Multiple requests sent on task lists toggle
- [FRONTEND] [GUI] Wrongly display redis settings on filebeat configuration change

## [2.33.1] - 2025-10-29
### Fixed
- [GUI] [FILBEAT] Don't automatically change the 'input logs type' attribute on existing configuration load


## [2.33.0] - 2025-10-24
### Removed
- [HAPROXY] [SPOE] Remove unused configuration files
- [FRONTEND] [FILEBEAT] Prevent possibility to use 'Vendor API' inputs on filebeat Listeners
### Added
- [FRONTEND] [FILEBEAT] Add new inputs for filebeat listeners
### Changed
- [FRONTEND] [GUI] Correctly show 'Log forwarders - parse failure' for Filebeat Listeners