@@ -182,6 +182,11 @@ class TrendmicroVisiononeParser(ApiParser):
     
     @staticmethod
     def _format_logs(log):
+        if log.get("detail", {}).get("objectRawDataStr",{}):
+            del log["detail"]["objectRawDataStr"]
+        for highlightedObject in log.get("filters", {}).get("highlightedObjects",[]):
+            if highlightedObject.get("field", "") == "objectRawDataStr":
+                del highlightedObject["value"]
         return json.dumps(log)
 
     def execute(self):
